Update the website; relate that the repo is private until after the submission.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #df0077;
+      /* background-color: #df0077; */
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
@@ -31,7 +31,9 @@
 </head>
 
 <body>
-  <a href="http://github.com/rdancer/Travelling-Salesmen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
+  <!-- XXX Uncomment when the repo goes public -->
+  <!--a href="http://github.com/rdancer/Travelling-Salesmen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a-->
 
   <div id="container">
 
@@ -56,6 +58,13 @@ Autem accusam ex ius, modo reque augue ad qui. An assum aliquid explicari sit, l
 <p>TBC</p>
 <h2>Install</h2>
 <p>TBC</p>
+<h2>Release</h2>
+<p>
+  This project will be kept private until around mid-December 2011, in order to comply with the Durham University plagiarism guidelines regarding summative work.
+</p>
+
+<!-- XXX Uncomment when the repo goes public -->
+<!--
 <h2>License</h2>
 <p>All rights reserved.</p>
 <h2>Authors</h2>
@@ -79,7 +88,10 @@ Autem accusam ex ius, modo reque augue ad qui. An assum aliquid explicari sit, l
       get the source code on GitHub : <a href="http://github.com/rdancer/Travelling-Salesmen">rdancer/Travelling-Salesmen</a>
     </div>
 
+-->
+
   </div>
+
 
   <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
