--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       margin-top: 1.0em;
       /* background-color: #df0077; */
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #ffffff;
+      /* color: #ffffff */;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #20ff88; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; /* color: #20ff88; */ margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #20ff88; }
-    h3 { text-align: center; color: #20ff88; }
-    a { color: #20ff88; }
+    h2 { font-size: 1.5em; /* color: #20ff88; */ }
+    h3 { text-align: center; /* color: #20ff88; */ }
+    a { /* color: #20ff88; */ }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
@@ -37,23 +37,24 @@
 
   <div id="container">
 
-    <div class="download">
+  <!-- XXX Uncomment when the repo goes public -->
+    <!--div class="download">
       <a href="http://github.com/rdancer/Travelling-Salesmen/zipball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
       <a href="http://github.com/rdancer/Travelling-Salesmen/tarball/master">
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
+    </div-->
 
-    <h1><a href="http://github.com/rdancer/Travelling-Salesmen">Travelling-Salesmen</a>
-      <span class="small">by <a href="http://github.com/rdancer">rdancer</a></span></h1>
+    <h1><a href="http://github.com/rdancer/Travelling-Salesmen">Travelling Salesmen</a></h1>
+      <span class="small">by&nbsp;<a href="http://github.com/rdancer">Jan&nbsp;Minář</a></span>
 
     <div class="description">
       AI Search Assignment Solution Michaelmas 2011
     </div>
 
-    <p>Lorem ipsum dolor sit amet, dolor delenit laoreet qui et, eam id novum noster reformidans, duo ei dolor possit. Eam sumo possit malorum ut. Ei est vidit admodum volumus, eum quod aliquid interesset ea. No sea erant verterem, eum cu consul democritum theophrastus. Ut vim lorem integre, ferri periculis id mea, pro denique deserunt delicata ut.
+    <p>Lorem ipsum dolor sit amet, dolor delenit laoreet qui et, eam id novum noster reformidans, duo ei dolor possit. Eam sumo possit malorum ut. Ei est vidit admodum volumus, eum quod aliquid interesset ea. No sea erant verterem, eum cu consul democritum theophrastus. Ut vim lorem integre, ferri periculis id mea, pro denique deserunt delicata ut.</p>
 
-Autem accusam ex ius, modo reque augue ad qui. An assum aliquid explicari sit, lorem error postea pro no, ei eos nemore splendide. Alterum ceteros pericula pro ad. Feugiat argumentum vis et, mea fuisset copiosae in, no pro fuisset principes. Has ut dicam legimus lobortis.
+<p>Autem accusam ex ius, modo reque augue ad qui. An assum aliquid explicari sit, lorem error postea pro no, ei eos nemore splendide. Alterum ceteros pericula pro ad. Feugiat argumentum vis et, mea fuisset copiosae in, no pro fuisset principes. Has ut dicam legimus lobortis.</p>
 </p><h2>Dependencies</h2>
 <p>TBC</p>
 <h2>Install</h2>
